INCLUDES = -I$(top_srcdir)/src

bin_PROGRAMS = \
	testcameo \
	testbadendpoint \
	teststate \
	testpublisher \
	testsubscriber \
	testsubscriberandpublisher \
	testresult \
	teststartwithresult \
	teststop \
	teststartwithstop \
	testpublisherloop \
	testresponder \
	testrequesterandresponder \
	testcancel \
	testtimeout \
	testconnectionchecker


testcameo_SOURCES = \
	Test.cpp

testcameo_CPPFLAGS = $(CAMEO_CXXFLAGS)
testcameo_LDFLAGS = $(CAMEO_LDFLAGS)
testcameo_LDADD = ../libcameo.la $(CAMEO_LIBS)


testbadendpoint_SOURCES = \
	TestBadEndpoint.cpp

testbadendpoint_CPPFLAGS = $(CAMEO_CXXFLAGS)
testbadendpoint_LDFLAGS = $(CAMEO_LDFLAGS)
testbadendpoint_LDADD = ../libcameo.la $(CAMEO_LIBS)


teststate_SOURCES = \
	TestStateApplication.cpp

teststate_CPPFLAGS = $(CAMEO_CXXFLAGS)
teststate_LDFLAGS = $(CAMEO_LDFLAGS)
teststate_LDADD = ../libcameo.la $(CAMEO_LIBS)


testpublisher_SOURCES = \
	TestPublisherApplication.cpp

testpublisher_CPPFLAGS = $(CAMEO_CXXFLAGS)
testpublisher_LDFLAGS = $(CAMEO_LDFLAGS)
testpublisher_LDADD = ../libcameo.la $(CAMEO_LIBS)
	
	
testsubscriber_SOURCES = \
	TestSubscriberApplication.cpp

testsubscriber_CPPFLAGS = $(CAMEO_CXXFLAGS)
testsubscriber_LDFLAGS = $(CAMEO_LDFLAGS)
testsubscriber_LDADD = ../libcameo.la $(CAMEO_LIBS)
	
	
testsubscriberandpublisher_SOURCES = \
	TestSubscriberAndPublisherApplication.cpp

testsubscriberandpublisher_CPPFLAGS = $(CAMEO_CXXFLAGS)
testsubscriberandpublisher_LDFLAGS = $(CAMEO_LDFLAGS)
testsubscriberandpublisher_LDADD = ../libcameo.la $(CAMEO_LIBS)
	
	
testresult_SOURCES = \
	TestResultApplication.cpp

testresult_CPPFLAGS = $(CAMEO_CXXFLAGS)
testresult_LDFLAGS = $(CAMEO_LDFLAGS)
testresult_LDADD = ../libcameo.la $(CAMEO_LIBS)


teststartwithresult_SOURCES = \
	TestStartWithResultApplication.cpp

teststartwithresult_CPPFLAGS = $(CAMEO_CXXFLAGS)
teststartwithresult_LDFLAGS = $(CAMEO_LDFLAGS)
teststartwithresult_LDADD = ../libcameo.la $(CAMEO_LIBS)
	
	
teststop_SOURCES = \
	TestStopApplication.cpp

teststop_CPPFLAGS = $(CAMEO_CXXFLAGS)
teststop_LDFLAGS = $(CAMEO_LDFLAGS)
teststop_LDADD = ../libcameo.la $(CAMEO_LIBS)
	

teststartwithstop_SOURCES = \
	TestStartWithStopApplication.cpp

teststartwithstop_CPPFLAGS = $(CAMEO_CXXFLAGS)
teststartwithstop_LDFLAGS = $(CAMEO_LDFLAGS)
teststartwithstop_LDADD = ../libcameo.la $(CAMEO_LIBS)


testpublisherloop_SOURCES = \
	TestPublisherLoopApplication.cpp

testpublisherloop_CPPFLAGS = $(CAMEO_CXXFLAGS)
testpublisherloop_LDFLAGS = $(CAMEO_LDFLAGS)
testpublisherloop_LDADD = ../libcameo.la $(CAMEO_LIBS)


testresponder_SOURCES = \
	TestResponderApplication.cpp

testresponder_CPPFLAGS = $(CAMEO_CXXFLAGS)
testresponder_LDFLAGS = $(CAMEO_LDFLAGS)
testresponder_LDADD = ../libcameo.la $(CAMEO_LIBS)


testrequesterandresponder_SOURCES = \
	TestRequesterAndResponderApplication.cpp

testrequesterandresponder_CPPFLAGS = $(CAMEO_CXXFLAGS)
testrequesterandresponder_LDFLAGS = $(CAMEO_LDFLAGS)
testrequesterandresponder_LDADD = ../libcameo.la $(CAMEO_LIBS)


testcancel_SOURCES = \
	TestCancelApplication.cpp

testcancel_CPPFLAGS = $(CAMEO_CXXFLAGS)
testcancel_LDFLAGS = $(CAMEO_LDFLAGS)
testcancel_LDADD = ../libcameo.la $(CAMEO_LIBS)


testtimeout_SOURCES = \
	TestTimeoutApplication.cpp

testtimeout_CPPFLAGS = $(CAMEO_CXXFLAGS)
testtimeout_LDFLAGS = $(CAMEO_LDFLAGS)
testtimeout_LDADD = ../libcameo.la $(CAMEO_LIBS)


testconnectionchecker_SOURCES = \
	TestConnectionCheckerApplication.cpp

testconnectionchecker_CPPFLAGS = $(CAMEO_CXXFLAGS)
testconnectionchecker_LDFLAGS = $(CAMEO_LDFLAGS)
testconnectionchecker_LDADD = ../libcameo.la $(CAMEO_LIBS)
