base_files = files(
  'AppException.cpp',
  'Application.cpp',
  'BadFormatException.cpp',
  'CancelEvent.cpp',
  'ConnectionChecker.cpp',
  'ConnectionTimeout.cpp',
  'Event.cpp',
  'EventListener.cpp',
  'EventStreamSocket.cpp',
  'EventThread.cpp',
  'IdGenerator.cpp',
  'InitException.cpp',
  'InvalidArgumentException.cpp',
  'JSON.cpp',
  'KeyAlreadyExistsException.cpp',
  'KeyEvent.cpp',
  'KeyValue.cpp',
  'Messages.cpp',
  'Object.cpp',
  'OutputStreamSocket.cpp',
  'RemoteException.cpp',
  'RequestSocket.cpp',
  'Response.cpp',
  'ResultEvent.cpp',
  'Server.cpp',
  'SocketException.cpp',
  'StatusEvent.cpp',
  'Strings.cpp',
  'TimeCondition.cpp',
  'Timeout.cpp',
  'TimeoutCounter.cpp',
  'UndefinedApplicationException.cpp',
  'UndefinedKeyException.cpp',
  'UnregisteredApplicationException.cpp',
  'Waiting.cpp',
  'WaitingSet.cpp',
  )
base_impl_inc = include_directories('impl')
base_inc = include_directories('.')
